Fixed the map position

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             <div class="row" style="margin:0px;">
               <div class="title-panel col-md-12 col-sm-12">
                 <div id="header-text">
-                  <p>>Who does,</p>
-                  <p>>What,</p>
-                  <p>>Where (3)</p>
+                  <p><span>>Who does,</span></br>
+                  <span>>What,</span></br>
+                  <span>>Where (3)</span></p>
                 </div>
               </div>
               <div class="top-panel col-md-12 col-sm-12">
