Fixes the ledgend

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div id="header-text">
                   <p><span>>Who does,</span></br>
                   <span>>What,</span></br>
-                  <span>>Where (3)</span></p>
+                  <span>>Where (3W)</span></p>
                 </div>
               </div>
               <div class="top-panel col-md-12 col-sm-12">
