--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <link href="./css/bootstrap.min.css" rel="Stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="./css/uganda.map.css" rel="Stylesheet" type="text/css">
-
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css"
+   integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ=="
+   crossorigin=""/>
+   <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"
+   integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
+   crossorigin=""></script>
 </head>
 
 <body>
@@ -94,5 +99,9 @@
   <script src="./js/queue.v1.min.js"></script>
   <script src="./js/uganda.map.js"></script>
 
+<script type="text/javascript">
+  
+</script>
+
 </body>
-</html>   
+</html>
