Added custom basemap

--- a/index.html
+++ b/index.html
@@ -71,8 +71,18 @@
                   <span>>Where (3W)</span></p>
                 </div>
               </div>
-
             </div>
+
+            <div class="row cLegend" style="margin:0px;">
+              <div class="title-panel col-md-12 col-sm-12">
+                <div id="header-text">
+                  <!-- <p><span>>Who does,</span></br>
+                  <span>>What,</span></br>
+                  <span>>Where (3W)</span></p> -->
+                </div>
+              </div>
+            </div>
+
         </div>
 
 
