--- a/index.html
+++ b/index.html
@@ -73,13 +73,15 @@
               </div>
             </div>
 
-            <div class="row cLegend" style="margin:0px;">
-              <div class="title-panel col-md-12 col-sm-12">
-                <div id="header-text">
-                  <!-- <p><span>>Who does,</span></br>
-                  <span>>What,</span></br>
-                  <span>>Where (3W)</span></p> -->
-                </div>
+            <div class="row cLegend">
+              <div class="col-md-12 col-sm-12">
+                <p id="cLegend-title">
+                  Number of Agencies
+                </p>
+                <div><span class="colorbox one"></span><span class="cLegend-value">11</span></div>
+                <div><span class="colorbox two"></span><span class="cLegend-value">19</span></div>
+                <div><span class="colorbox three"></span><span class="cLegend-value">29</span></div>
+                <div><span class="colorbox four"></span><span class="cLegend-value">49</span></div>
               </div>
             </div>
 
