Adding ranges to the legend

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                 <p id="cLegend-title">
                   Number of Agencies
                 </p>
-                <div><span class="colorbox one"></span><span class="cLegend-value">11</span></div>
-                <div><span class="colorbox two"></span><span class="cLegend-value">19</span></div>
-                <div><span class="colorbox three"></span><span class="cLegend-value">29</span></div>
-                <div><span class="colorbox four"></span><span class="cLegend-value">49</span></div>
+                <div><span class="colorbox one"></span><span class="cLegend-value">0-11</span></div>
+                <div><span class="colorbox two"></span><span class="cLegend-value">12-19</span></div>
+                <div><span class="colorbox three"></span><span class="cLegend-value">20-29</span></div>
+                <div><span class="colorbox four"></span><span class="cLegend-value">30-49</span></div>
               </div>
             </div>
 
