--- a/index.html
+++ b/index.html
@@ -13,16 +13,13 @@
    <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"
    integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
    crossorigin=""></script>
-  </head>
+</head>
 
 <body>
   <div class="main-container">
 
 
-    <div class="top-panel col-md-8 col-sm-8">
-        <div class="head col-md-2 col-sm-2" style="background:24px;">
-            <p id="d3-map-info">Click on map or left menu to see filtered stats</p>
-        </div>
+              <div class="top-panel col-md-8 col-sm-8">
                 <div class="head col-md-2 col-sm-2">
                   <p class="custom-count-header">Districts </p>
                   <p id="district-count" class="custom-count">0</p>
@@ -31,48 +28,20 @@
                   <p class="custom-count-header">Settlements</p>
                   <p id="settlement-count" class="custom-count">0</p>
                 </div>
-                <!--<div class=" head col-md-2 col-sm-2">
+                <div class=" head col-md-2 col-sm-2">
                   <p class="custom-count-header">Sectors</p>
                   <p id="sector-count" class="custom-count">0</p>
-                </div>-->
+                </div>
                 <div class="head col-md-2 col-sm-2">
-                  <p class="custom-count-header">Partners</p>
+                  <p class="custom-count-header">Agencies</p>
                   <p id="agency-count" class="custom-count">0</p>
                 </div>
               </div>
-   <!-- <div class="right-panel col-md-8 col-sm-8">
-          <div class="head col-md-2 col-sm-2">
-              <p class="custom-count-header">UN </p>
-              <p id="unAgency-count" class="custom-count">0</p>
-          </div>
-        <div class="head col-md-2 col-sm-2">
-            <p class="custom-count-header">IP </p>
-            <p id="ipAgency-count" class="custom-count">0</p>
-        </div>
-        <div class="head col-md-2 col-sm-2">
-            <p class="custom-count-header">OP </p>
-            <p id="opAgency-count" class="custom-count">0</p>
-        </div>
-      </div>
--->
-
     <div class="row" style="margin:0px;">
       <!--<div class="bottom-panel col-md-12" style="padding: 0 5px;">  <span class="glyphicon glyphicon-menu-down"></span>-->
-      <div class="left-panel col-md-2 col-sm-2">
-      <div class="counter-panel col-md-12">
-              <div class="row" style="margin:0px;">
-                  <div class="title-panel col-md-12 col-sm-12">
-                      <div id="header-text">
-                          <p><span>>Who does,</span></br>
-                              <span>>What,</span></br>
-                              <span>>Where (3W)</span></p>
-                      </div>
-                  </div>
-              </div>
-
-          </div>
+      <div class="left-panel col-md-4 col-sm-4">
       <div class="details-panel col-md-12 col-sm-12">
-        <div class="menu-panel col-md-12 col-sm-12">
+        <div class="menu-panel col-md-6 col-sm-6">
             <div class="list-container">
               <div class="col-md-12">
                 <p class="custom-list-header">District <i class="glyphicon glyphicon-chevron-down"></i></p>
@@ -87,23 +56,37 @@
                 <div id="sector-list" class="custom-list"></div>
               </div>
               <div class="col-md-12">
-                <p class="custom-list-header">Partner <i class="glyphicon glyphicon-chevron-down"></i></p>
+                <p class="custom-list-header">Agency <i class="glyphicon glyphicon-chevron-down"></i></p>
                 <div id="agency-list" class="custom-list"></div>
-            </div>
-            <div class="col-md-12">
-                  <p id="d3-map-refresh">Clear all</p>
-            </div>
+              </div>
             </div>
         </div>
+
+        <div class="counter-panel col-md-6 col-sm-6">
+            <div class="row" style="margin:0px;">
+              <div class="title-panel col-md-12 col-sm-12">
+                <div id="header-text">
+                  <p><span>>Who does,</span></br>
+                  <span>>What,</span></br>
+                  <span>>Where (3W)</span></p>
+                </div>
+              </div>
+            </div>
+
+        </div>
+
+
+
       </div>
 
       </div>
 
       <div class="right-panel col-md-12 col-sm-12">
         <div id="d3-map-container">
-          <!--<div style="background:#f5f5f5;height:24px; position:absolute; top:0px; width:100%;">
+          <div style="background:#f5f5f5;height:24px; position:absolute; top:0px; width:100%;">
             <p id="d3-map-info">Click on map or left menu to see filtered stats</p>
-          </div>-->
+            <p id="d3-map-refresh">Clear all</p>
+          </div>
           <div id="d3-map-wrapper"></div>
         </div>
       </div>
