--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
           <div style="background:#f5f5f5;height:24px; position:absolute; top:0px; width:100%;">
             <p id="d3-map-info">Click on map or left menu to see filtered stats</p>
             <p id="d3-map-refresh">Clear all</p>
+            <p id="d3-map-make-pdf">Download PDF</p>
           </div>
           <div id="d3-map-wrapper"></div>
         </div>
