--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
    <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"
    integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
    crossorigin=""></script>
+   <script src="https://unpkg.com/leaflet-image@latest/leaflet-image.js"></script>
+   <script src="https://unpkg.com/jspdf@latest/dist/jspdf.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/2.3.2/jspdf.plugin.autotable.js"></script>
+   <script src="./js/saveSvgAsPng.js"></script>
+   <script src="./js/pdf.js"></script>
 </head>
 
 <body>
