--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <script src="https://unpkg.com/leaflet-image@latest/leaflet-image.js"></script>
    <script src="https://unpkg.com/jspdf@latest/dist/jspdf.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/2.3.2/jspdf.plugin.autotable.js"></script>
-   <script src="http://spin.js.org/spin.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/spin.js/2.3.2/spin.min.js"></script>
    <script src="./js/saveSvgAsPng.js"></script>
    <script src="./js/pdf.js"></script>
 </head>
