Add legend outside of map

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             <p id="d3-map-info">Click on map or left menu to see filtered stats</p>
             <p id="d3-map-refresh">Clear all</p>
             <p id="d3-map-make-pdf">Download PDF</p>
+            <div id="legend"></div>
           </div>
           <div id="d3-map-wrapper"></div>
         </div>
