--- a/index.html
+++ b/index.html
@@ -34,15 +34,12 @@
                   <p class="custom-count-header">Settlements</p>
                   <p id="settlement-count" class="custom-count">0</p>
                 </div>
-                <div class=" head col-md-2 col-sm-2">
-                  <p class="custom-count-header">Sectors</p>
-                  <p id="sector-count" class="custom-count">0</p>
-                </div>
                 <div class="head col-md-2 col-sm-2">
-                  <p class="custom-count-header">Agencies</p>
+                  <p class="custom-count-header">Partners</p>
                   <p id="agency-count" class="custom-count">0</p>
                 </div>
               </div>
+    </div>
     <div class="row" style="margin:0px;">
       <!--<div class="bottom-panel col-md-12" style="padding: 0 5px;">  <span class="glyphicon glyphicon-menu-down"></span>-->
       <div class="left-panel col-md-4 col-sm-4">
@@ -62,7 +59,7 @@
                 <div id="sector-list" class="custom-list"></div>
               </div>
               <div class="col-md-12">
-                <p class="custom-list-header">Agency <i class="glyphicon glyphicon-chevron-down"></i></p>
+                <p class="custom-list-header">Partners <i class="glyphicon glyphicon-chevron-down"></i></p>
                 <div id="agency-list" class="custom-list"></div>
               </div>
             </div>
@@ -98,6 +95,27 @@
           <div id="d3-map-wrapper"></div>
         </div>
       </div>
+
+      <div class="panel-right row-md-8">
+        <div class="row" style="margin: 10px 10px 10px 10px;">
+          <div class="head row-lg-8">
+            <p class="custom-count-header">UN </p>
+            <p id="unAgency-count" class="custom-count">0</p>
+          </div>
+        </div>
+        <div class="row" style="margin: 10px 10px 10px 10px;">
+          <div class="head row-lg-8">
+            <p class="custom-count-header">IP </p>
+            <p id="ipAgency-count" class="custom-count">0</p>
+          </div>
+        </div>
+        <div class="row" style="margin: 10px 10px 10px 10px;">
+          <div class="head row-lg-8">
+            <p class="custom-count-header">OP </p>
+            <p id="opAgency-count" class="custom-count">0</p>
+          </div>
+        </div>
+
     </div>
   </div>
 
