Edit IP OP within top panel

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 
               <div class="top-panel col-md-8 col-sm-8">
+                <div>
                 <div class="head col-md-2 col-sm-2">
                   <p class="custom-count-header">Districts </p>
                   <p id="district-count" class="custom-count">0</p>
@@ -37,6 +38,7 @@
                 <div class="head col-md-2 col-sm-2">
                   <p class="custom-count-header">Partners</p>
                   <p id="agency-count" class="custom-count">0</p>
+                </div>
                 </div>
 
                 <div class="panel-right row-md-8">
