Edit to Top panel

--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
 
                 <div class="panel-right row-md-8">
                   <div class="row" style="margin: 10px 10px 10px 10px;">
-                    <div class="head row-lg-8">
+                    <div class="head row-md-8">
                       <p class="custom-count-header">UN </p>
                       <p id="unAgency-count" class="custom-count">0</p>
                     </div>
                   </div>
                   <div class="row" style="margin: 10px 10px 10px 10px;">
-                    <div class="head row-lg-8">
+                    <div class="head row-md-8">
                       <p class="custom-count-header">IP </p>
                       <p id="ipAgency-count" class="custom-count">0</p>
                     </div>
                   </div>
                   <div class="row" style="margin: 10px 10px 10px 10px;">
-                    <div class="head row-lg-8">
+                    <div class="head row-md-8">
                       <p class="custom-count-header">OP </p>
                       <p id="opAgency-count" class="custom-count">0</p>
                     </div>
