--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 
               <div class="top-panel col-md-8 col-sm-8">
+                <div>
                 <div class="head col-md-2 col-sm-2">
                   <p class="custom-count-header">Districts </p>
                   <p id="district-count" class="custom-count">0</p>
@@ -34,20 +35,51 @@
                   <p class="custom-count-header">Settlements</p>
                   <p id="settlement-count" class="custom-count">0</p>
                 </div>
-                <div class=" head col-md-2 col-sm-2">
-                  <p class="custom-count-header">Sectors</p>
-                  <p id="sector-count" class="custom-count">0</p>
-                </div>
                 <div class="head col-md-2 col-sm-2">
-                  <p class="custom-count-header">Agencies</p>
+                  <p class="custom-count-header">Partners</p>
                   <p id="agency-count" class="custom-count">0</p>
                 </div>
+                </div>
+
+                <div class="panel-right row-md-8">
+                  <div class="row" style="margin: 10px 10px 10px 10px;">
+                    <div class="head row-md-8">
+                      <p class="custom-count-header">UN </p>
+                      <p id="unAgency-count" class="custom-count">0</p>
+                    </div>
+                  </div>
+                  <div class="row" style="margin: 10px 10px 10px 10px;">
+                    <div class="head row-md-8">
+                      <p class="custom-count-header">IP </p>
+                      <p id="ipAgency-count" class="custom-count">0</p>
+                    </div>
+                  </div>
+                  <div class="row" style="margin: 10px 10px 10px 10px;">
+                    <div class="head row-md-8">
+                      <p class="custom-count-header">OP </p>
+                      <p id="opAgency-count" class="custom-count">0</p>
+                    </div>
+                  </div>
+                </div>
               </div>
+    </div>
     <div class="row" style="margin:0px;">
       <!--<div class="bottom-panel col-md-12" style="padding: 0 5px;">  <span class="glyphicon glyphicon-menu-down"></span>-->
       <div class="left-panel col-md-4 col-sm-4">
       <div class="details-panel col-md-12 col-sm-12">
         <div class="menu-panel col-md-6 col-sm-6">
+            <div class="counter-panel">
+                <div class="row" style="margin:0px;">
+                    <div class="title-panel col-md-12">
+                        <div id="header-text">
+                            <p><span>>Who does,</span></br>
+                                <span>>What,</span></br>
+                                <span>>Where (3W)</span></p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
             <div class="list-container">
               <div class="col-md-12">
                 <p class="custom-list-header">District <i class="glyphicon glyphicon-chevron-down"></i></p>
@@ -62,24 +94,12 @@
                 <div id="sector-list" class="custom-list"></div>
               </div>
               <div class="col-md-12">
-                <p class="custom-list-header">Agency <i class="glyphicon glyphicon-chevron-down"></i></p>
+                <p class="custom-list-header">Partners <i class="glyphicon glyphicon-chevron-down"></i></p>
                 <div id="agency-list" class="custom-list"></div>
               </div>
             </div>
         </div>
 
-        <div class="counter-panel col-md-6 col-sm-6">
-            <div class="row" style="margin:0px;">
-              <div class="title-panel col-md-12 col-sm-12">
-                <div id="header-text">
-                  <p><span>>Who does,</span></br>
-                  <span>>What,</span></br>
-                  <span>>Where (3W)</span></p>
-                </div>
-              </div>
-            </div>
-
-        </div>
 
 
 
@@ -98,7 +118,8 @@
           <div id="d3-map-wrapper"></div>
         </div>
       </div>
-    </div>
+
+
   </div>
 
   <script src="./js/d3.v3.min.js"></script>
