--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
       <div class="right-panel col-md-12 col-sm-12">
         <div id="d3-map-container">
           <div style="background:#f5f5f5;height:24px; position:absolute; top:0px; width:100%;">
-            <p id="d3-map-info">Click on map or left menu to see filtered stats</p>
+            <p id="d3-map-info">To Filter: Use Left Menu <br/>
+            For Info: Click Map Feature</p>
             <p id="d3-map-refresh">Clear all</p>
             <p id="d3-map-make-pdf">Download PDF</p>
             <div id="legend"></div>
