--- a/index.html
+++ b/index.html
@@ -24,9 +24,17 @@
 <body>
   <div class="main-container">
 
+      <div class="top-panel col-md-8 col-sm-8" style="top: 10px; left: 270px;">
+          <div class="head" style="width: 200px;">
+              <p id="d3-map-info">To Filter: Use Left Menu <br/>
+                  For Info: Click Map Feature</p>
+          </div>
+      </div>
 
-              <div class="top-panel col-md-8 col-sm-8">
-                <div>
+    <div class="top-panel col-md-8 col-sm-8">
+
+
+
                 <div class="head col-md-2 col-sm-2">
                   <p class="custom-count-header">Districts </p>
                   <p id="district-count" class="custom-count">0</p>
@@ -39,6 +47,8 @@
                   <p class="custom-count-header">Partners</p>
                   <p id="agency-count" class="custom-count">0</p>
                 </div>
+
+
                 </div>
 
                 <div class="panel-right row-md-8">
@@ -62,12 +72,11 @@
                   </div>
                 </div>
               </div>
-    </div>
-    <div class="row" style="margin:0px;">
+  <div class="row" style="margin:0px;">
       <!--<div class="bottom-panel col-md-12" style="padding: 0 5px;">  <span class="glyphicon glyphicon-menu-down"></span>-->
-      <div class="left-panel col-md-4 col-sm-4">
-      <div class="details-panel col-md-12 col-sm-12">
-        <div class="menu-panel col-md-6 col-sm-6">
+      <div class="left-panel col-md-2">
+
+        <div class="menu-panel">
             <div class="counter-panel">
                 <div class="row" style="margin:0px;">
                     <div class="title-panel col-md-12">
@@ -100,18 +109,11 @@
             </div>
         </div>
 
-
-
-
-      </div>
-
       </div>
 
       <div class="right-panel col-md-12 col-sm-12">
         <div id="d3-map-container">
           <div style="background:#f5f5f5;height:24px; position:absolute; top:0px; width:100%;">
-            <p id="d3-map-info">To Filter: Use Left Menu <br/>
-            For Info: Click Map Feature</p>
             <p id="d3-map-refresh">Clear all</p>
             <p id="d3-map-make-pdf">Download PDF</p>
             <div id="legend"></div>
