--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="panel-right row-md-8">
 
                     <div class="head" style="width: auto;">
-                        <p id="d3-map-info">Partners involved in the response</p>
+                        <p id="d3-map-info" style="font-size: 16px;">Partners involved in the response</p>
                     </div>
 
                   <div class="row" style="margin: 10px 0px 0px 0px;">
@@ -96,11 +96,11 @@
             </div>
             <div class="list-container">
               <div class="col-md-12">
-                <p class="custom-list-header">District <i class="glyphicon glyphicon-chevron-down"></i></p>
+                <p class="custom-list-header">Districts <i class="glyphicon glyphicon-chevron-down"></i></p>
                 <div id="district-list" class="custom-list"></div>
               </div>
               <div class="col-md-12">
-                <p class="custom-list-header">Refugee Site <i class="glyphicon glyphicon-chevron-down"></i></p>
+                <p class="custom-list-header">Refugee Sites <i class="glyphicon glyphicon-chevron-down"></i></p>
                 <div id="settlement-list" class="custom-list"></div>
               </div>
               <div class="col-md-12">
