Updates to HTML names

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                   <p id="district-count" class="custom-count">0</p>
                 </div>
                 <div class=" head col-md-2 col-sm-2">
-                  <p class="custom-count-header">Refugee Sites </p>
+                  <p class="custom-count-header">Refugee sites </p>
                   <p id="settlement-count" class="custom-count">0</p>
                 </div>
                 <div class="head col-md-2 col-sm-2">
@@ -59,7 +59,7 @@
 
                   <div class="row" style="margin: 10px 0px 0px 0px;">
                     <div class="head row-md-8">
-                      <p class="custom-count-header">UN Agencies </p>
+                      <p class="custom-count-header">UN agencies </p>
                       <p id="unAgency-count" class="custom-count">0</p>
                     </div>
                   </div>
@@ -100,7 +100,7 @@
                 <div id="district-list" class="custom-list"></div>
               </div>
               <div class="col-md-12">
-                <p class="custom-list-header">Refugee Sites <i class="glyphicon glyphicon-chevron-down"></i></p>
+                <p class="custom-list-header">Refugee sites <i class="glyphicon glyphicon-chevron-down"></i></p>
                 <div id="settlement-list" class="custom-list"></div>
               </div>
               <div class="col-md-12">
