--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
 
 
                 <div class="head col-md-2 col-sm-2">
-                  <p class="custom-count-header">Districts </p>
+                  <p class="custom-count-header" style="height:63.2px; font-size: 16px;"><br>Districts </p>
                   <p id="district-count" class="custom-count">0</p>
                 </div>
                 <div class=" head col-md-2 col-sm-2">
-                  <p class="custom-count-header">Refugee sites </p>
+                  <p class="custom-count-header" style="height:63.2px; overflow-y: auto;">Refugee sites <small style="line-height: 0.1%; font-size: 10px;"><br>entry points, transit centres, reception centres and settlements</small> </p>
                   <p id="settlement-count" class="custom-count">0</p>
                 </div>
                 <div class="head col-md-2 col-sm-2">
-                  <p class="custom-count-header">Partners </p>
+                  <p class="custom-count-header"  style="height:63.2px;  font-size: 16px;ithub"><br>Partners </p>
                   <p id="agency-count" class="custom-count">0</p>
                 </div>
 
@@ -54,7 +54,7 @@
                 <div class="panel-right row-md-8">
 
                     <div class="head" style="width: auto;">
-                        <p id="d3-map-info" style="font-size: 16px;">Partners involved in the response</p>
+                        <p id="d3-map-info" style="font-weight: bold;font-size: 16px;">Partners involved in the response</p>
                     </div>
 
                   <div class="row" style="margin: 10px 0px 0px 0px;">
@@ -100,7 +100,7 @@
                 <div id="district-list" class="custom-list"></div>
               </div>
               <div class="col-md-12">
-                <p class="custom-list-header">Refugee sites <i class="glyphicon glyphicon-chevron-down"></i></p>
+                <p class="custom-list-header">Refugee sites <small style="color: #52595e; font-weight: bold; font-style: normal; font-family: Roboto,sans-serif; font-size: 10px"><br>entry points, transit centres, reception<br> centres and settlements</small> <i class="glyphicon glyphicon-chevron-down"></i></p>
                 <div id="settlement-list" class="custom-list"></div>
               </div>
               <div class="col-md-12">
