--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <div class="right-panel col-md-12 col-sm-12">
         <div id="d3-map-container">
             <div style="background:#f5f5f5;height:24px; position:absolute; top:0px; width:100%;">
-                <p id="d3-map-refresh">Clear all</p>
+                <p id="d3-map-refresh">Reset Filters</p>
                 <p id="d3-map-make-pdf">Download PDF</p>
                 <div id="legend"></div>
                 <div id="maplegend">
