Add more instructions

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <div class="top-panel col-md-8 col-sm-8" style="top: 10px; left: 250px;">
         <div class="head" style="width: 200px;">
             <p id="d3-map-info">To Filter: Use Left Menu <br/>
-                For Info: Click Map Feature</p>
+                For Info: Click Map Feature <br/>
+                To zoom to district: DoubleClick Map Feature </p>
         </div>
     </div>
 
