Edit previous edit

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="head" style="width: 200px;">
             <p id="d3-map-info">To Filter: Use Left Menu <br/>
                 For Info: Click Map Feature <br/>
-                To zoom to district: DoubleClick Map Feature </p>
+                To Zoom: DoubleClick Map Feature </p>
         </div>
     </div>
 
