--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="main-container">
 
     <div class="top-panel col-md-8 col-sm-8" style="top: 10px; left: 250px;">
-        <div class="head" style="width: 200px;">
+        <div class="head" style="width: 200px; height: 90px;">
             <p id="d3-map-info">To Filter: Use Left Menu <br/>
                 For Info: Click Map Feature <br/>
                 To Zoom: DoubleClick Map Feature </p>
