--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <div class="main-container">
 
     <div class="top-panel col-md-8 col-sm-8" style="top: 10px; left: 250px;">
-        <div class="head" style="width: 200px; height: 90px;">
-            <p id="d3-map-info">To Filter: Use Left Menu <br/>
+        <div class="head" style="width: 200px; height: 60px; font-family: Roboto, sans-serif; font-size: 13px; border-radius: 3px;">
+            <p>To Filter: Use Left Menu <br/>
                 For Info: Click Map Feature </p>
         </div>
     </div>
@@ -47,7 +47,7 @@
             <p id="settlement-count" class="custom-count">0</p>
         </div>
         <div class="head col-md-2 col-sm-2">
-            <p class="custom-count-header" style="height:63.2px;  font-size: 16px;ithub"><br>Partners </p>
+            <p class="custom-count-header" style="height:63.2px;  font-size: 16px;"><br>Partners </p>
             <p id="agency-count" class="custom-count">0</p>
         </div>
 
